# kazuos

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  auto_shell_qemu.ps1  auto_userdemo_qemu.ps1  launch.ps1  make_iso.bat  make_iso.ps1  make_iso.sh  qemu_qmp.ps1  run_in_qemu.bat  run_in_qemu.sh  rust-toolchain.toml  setup_limine_esp.ps1
.cargo/: config.toml
.github/: CODEOWNERS
crates/kernel/: Cargo.toml  build.rs  kazuos.ld  x86_64-kazuos.json  x86_64-kazuos.toml
crates/kernel/.cargo/: config.toml
crates/kernel/src/: allocator.rs  assets.rs  audio.rs  beep_songs.rs  boot.rs  console.rs  debug.rs  devfs.rs  drivers.rs  exec.rs  fd.rs  gdt.rs  handlers.rs  idt.rs  init.rs  initramfs_builder.rs  ipc.rs  kmod.rs  log.rs  main.rs  memory.rs  net.rs  pipe.rs  platform.rs  pmm.rs  process.rs  rng.rs  scheduler.rs  smp.rs  syscall.rs  syscall_numbers.rs  task.rs  terminal.rs  tty.rs  user.rs  user_programs.rs  util.rs  vfs.rs  vmm.rs
crates/kernel/src/beep_songs/: beep_redzone.rs
crates/kernel/src/drivers/: ac97.rs  acpi.rs  beep.rs  e1000.rs  es1371.rs  fb_owner.rs  framebuffer.rs  hda.rs  ioapic.rs  keyboard.rs  lapic.rs  mouse.rs  pci.rs  pic.rs  pit.rs  power.rs  serial.rs
crates/kernel/src/handlers/: alloc.rs  faults.rs  interrupts.rs
crates/kernel/src/memory/: allocator.rs  pmm.rs  vmm.rs
crates/kernel/src/task/: process.rs  process.rs.tmp  scheduler.rs  thread.rs
crates/kernel/src/terminal/: bitmap.rs  console.rs  tty.rs
docs/: ARCHITECTURE.md  FILE_SYSTEM.md  KXE.md  MODULES.md  PS.md  SYSCALL.md  USER_ABI.md
scripts/: auto_test_pipeline.rs  (+5 more)
(+26 files in other folders)
